globals: Add more methods necessary for compiling re2j